Implement scrolling of the profile chooser in case it doesn't fit the screen.

Bug: 869343
Change-Id: I41925fe4b045f8489c11986ecefee0ebd5f624c0
Reviewed-on: https://chromium-review.googlesource.com/1160537
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581533}
Former-commit-id: a096eccb42822a1f3e58b52fa415ba6b24687951